// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapStateToProps returns the right keys 1`] = `
Object {
  "community": SessionBoundModel {
    "_fields": Object {
      "id": "99",
      "inviteLink": "/38adslkjlkj3",
      "slug": "foo",
    },
    "inviteLink": "/38adslkjlkj3",
    "slug": "foo",
  },
  "inviteLink": "https://www.hylo.comundefined",
  "invites": Array [
    SessionBoundModel {
      "_fields": Object {
        "community": "99",
        "email": "john@doe.com",
        "id": "33",
      },
    },
  ],
  "pending": undefined,
  "pendingCreate": undefined,
}
`;

exports[`mergeProps merges the props 1`] = `
Object {
  "graphql": Object {
    "query": "query ($communityId: ID) {
        community (id: $communityId) {
          id
          name
          slug
          invitePath
          allowCommunityInvites
          pendingInvitations (first: 100) {
            hasMore
            items {
              id
              email
              createdAt
              lastSentAt
            }
          }
        }
      }",
    "variables": Object {
      "communityId": "99",
    },
  },
  "meta": Object {
    "extractModel": "Community",
  },
  "type": "InvitePeople/FETCH_COMMUNITY_SETTINGS",
}
`;

exports[`mergeProps merges the props 2`] = `
Object {
  "graphql": Object {
    "query": "mutation ($communityId: ID) {
        regenerateAccessCode(communityId: $communityId) {
          id
          invitePath
        }
      }",
    "variables": Object {
      "communityId": "99",
    },
  },
  "meta": Object {
    "extractModel": "Community",
  },
  "type": "InvitePeople/REGENERATE_ACCESS_CODE",
}
`;

exports[`mergeProps merges the props 3`] = `
Object {
  "graphql": Object {
    "query": "mutation ($communityId: ID, $data: InviteInput) {
        createInvitation(communityId: $communityId, data: $data) {
          invitations {
            id,
            email,
            createdAt,
            lastSentAt,
            error
          }
        }
      }",
    "variables": Object {
      "communityId": "99",
      "data": Object {
        "emails": Array [
          "john@doe.com",
        ],
        "message": "MyMessage",
      },
    },
  },
  "meta": Object {
    "communityId": "99",
    "emails": Array [
      "john@doe.com",
    ],
    "optimistic": true,
  },
  "type": "InvitePeople/CREATE_INVITATIONS",
}
`;

exports[`mergeProps merges the props 4`] = `
Object {
  "graphql": Object {
    "query": "mutation ($communityId: ID) {
        reinviteAll(communityId: $communityId) {
          success
        }
      }",
    "variables": Object {
      "communityId": "99",
    },
  },
  "meta": Object {
    "communityId": "99",
    "optimistic": true,
  },
  "type": "InvitePeople/REINVITE_ALL",
}
`;

exports[`mergeProps merges the props 5`] = `
Object {
  "graphql": Object {
    "query": "mutation ($invitationToken: ID) {
        expireInvitation(invitationId: $invitationToken) {
          success
        }
      }",
    "variables": Object {
      "invitationToken": 10,
    },
  },
  "meta": Object {
    "invitationToken": 10,
    "optimistic": true,
  },
  "type": "InvitePeople/EXPIRE_INVITATION",
}
`;

exports[`mergeProps merges the props 6`] = `
Object {
  "graphql": Object {
    "query": "mutation ($invitationToken: ID) {
        resendInvitation(invitationId: $invitationToken) {
          success
        }
      }",
    "variables": Object {
      "invitationToken": 10,
    },
  },
  "meta": Object {
    "invitationToken": 10,
    "optimistic": true,
  },
  "type": "InvitePeople/RESEND_INVITATION",
}
`;

exports[`mergeProps merges the props 7`] = `
Object {
  "graphql": Object {
    "query": "mutation ($communityId: ID, $data: Boolean) {
        allowCommunityInvites(communityId: $communityId, data: $data) {
          id
        }
      }",
    "variables": Object {
      "communityId": 1,
      "data": true,
    },
  },
  "meta": Object {
    "communityId": 1,
    "optimistic": true,
  },
  "type": "InvitePeople/ALLOW_COMMUNITY_INVITES",
}
`;

exports[`mergeProps merges the props 8`] = `
Object {
  "allowCommunityInvites": [Function],
  "community": SessionBoundModel {
    "_fields": Object {
      "id": "99",
      "inviteLink": "/38adslkjlkj3",
      "slug": "foo",
    },
    "inviteLink": "/38adslkjlkj3",
    "slug": "foo",
  },
  "createInvitations": [Function],
  "createInvitationsMaker": [Function],
  "expireInvitation": [Function],
  "fetchCommunitySettings": [Function],
  "fetchCommunitySettingsMaker": [Function],
  "inviteLink": "https://www.hylo.comundefined",
  "invites": Array [
    SessionBoundModel {
      "_fields": Object {
        "community": "99",
        "email": "john@doe.com",
        "id": "33",
      },
    },
  ],
  "pending": undefined,
  "pendingCreate": undefined,
  "regenerateAccessCode": [Function],
  "regenerateAccessCodeMaker": [Function],
  "reinviteAll": [Function],
  "reinviteAllMaker": [Function],
  "resendInvitation": [Function],
}
`;
